Tasks for October added.